# CSC582_Assignment1

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/: .gitignore
doc/html/: FourBitAdder_8h_source.html  FullAdder_8h_source.html  HalfAdder_8h_source.html  annotated.html  classFourBitAdder-members.html  classFourBitAdder.html  classFourBitAdder__coll__graph.map  classFourBitAdder__coll__graph.md5  classFourBitAdder_aa87f350cb0f8d17d486a7a730a37f761_cgraph.map  classFourBitAdder_aa87f350cb0f8d17d486a7a730a37f761_cgraph.md5  classFullAdder-members.html  classFullAdder.html  classFullAdder__coll__graph.map  classFullAdder__coll__graph.md5  classFullAdder_a4e93e556929d63a44bf112103576cba1_cgraph.map  classFullAdder_a4e93e556929d63a44bf112103576cba1_cgraph.md5  classFullAdder_a4e93e556929d63a44bf112103576cba1_icgraph.map  classFullAdder_a4e93e556929d63a44bf112103576cba1_icgraph.md5  classFullAdder_a9cc2ac63e4a171fca1532318280ed32e_cgraph.map  classFullAdder_a9cc2ac63e4a171fca1532318280ed32e_cgraph.md5  classFullAdder_a9cc2ac63e4a171fca1532318280ed32e_icgraph.map  classFullAdder_a9cc2ac63e4a171fca1532318280ed32e_icgraph.md5  classFullAdder_abf1c8fbde7b532999e42d4aa0616e909_cgraph.map  classFullAdder_abf1c8fbde7b532999e42d4aa0616e909_cgraph.md5  classFullAdder_abf1c8fbde7b532999e42d4aa0616e909_icgraph.map  classFullAdder_abf1c8fbde7b532999e42d4aa0616e909_icgraph.md5  classHalfAdder-members.html  classHalfAdder.html  classHalfAdder__coll__graph.map  classHalfAdder__coll__graph.md5  classHalfAdder_a38e0126a4cbd25cfdaf72e7399f09743_icgraph.map  classHalfAdder_a38e0126a4cbd25cfdaf72e7399f09743_icgraph.md5  classHalfAdder_a79ea9823ff446a95032b933f914c511c_icgraph.map  classHalfAdder_a79ea9823ff446a95032b933f914c511c_icgraph.md5  classHalfAdder_aaf60416bb1b40ae7ef53509a8d45dc9d_icgraph.map  classHalfAdder_aaf60416bb1b40ae7ef53509a8d45dc9d_icgraph.md5  classes.html  dir_58c6b8a71099798499c4eef263226d0e.html  dir_58c6b8a71099798499c4eef263226d0e_dep.map  dir_58c6b8a71099798499c4eef263226d0e_dep.md5  (+7 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
source/: CMakeLists.txt
source/FourBitAdder/: CMakeLists.txt  FourBitAdder.h
tests/: CMakeLists.txt
tests/gtests/: CMakeLists.txt  GTestFourBitAdder.cpp  GTestFullAdder.cpp  GTestHalfAdder.cpp  GTestLogicGates.cpp
(+11 files in other folders)
